2010-08-19  Vladimir Serbinenko  <phcoder@gmail.com>

	Implement sendkey support.

	* commands/i386/pc/sendkey.c: New file.
	* conf/i386-pc.rmk (pkglib_MODULES): Add sendkey.mod.
	(sendkey_mod_SOURCES): New variable.
	(sendkey_mod_CFLAGS): Likewise.
	(sendkey_mod_LDFLAGS): Likewise.

2010-08-18  Colin Watson  <cjwatson@ubuntu.com>

	* configure.ac: Move AM_INIT_AUTOMAKE after AC_CANONICAL_TARGET to
	fix warnings from Autoconf.

2010-08-18  Colin Watson  <cjwatson@ubuntu.com>

	* acinclude.m4 (grub_ASM_USCORE): Use a more accurate grep pattern,
	to avoid false positives with some assemblers that output things
	like "someprefix_func" as part of their output.

2010-08-15  Robert Millan  <rmh@gnu.org>

	* kern/emu/misc.c (grub_get_libzfs_handle): Handle libzfs_init()
	errors.
	* kern/emu/getroot.c (find_root_device_from_libzfs): Handle
	grub_get_libzfs_handle() errors.

2010-08-14  Robert Millan  <rmh@gnu.org>

	* kern/emu/misc.c (grub_find_zpool_from_dir): Abort function if
	filesystem is not ZFS.

2010-08-12  BVK Chaitanya  <bvk.groups@gmail.com>

	Fix for misspelled color names defaulting to black/black (bug
	reported by Doug Nazar)

	* include/grub/normal.h (grub_parse_color_name_pair): Add return
	status to prototype.
	* normal/color.c (grub_parse_color_name_pair): Return failure
	status.
	(grub_env_write_color_normal): Ignore bad color names.
	(grub_env_write_color_highlight): Likewise.
	* normal/main.c (GRUB_MOD_INIT): Set default color names.

2010-08-12  BVK Chaitanya  <bvk.groups@gmail.com>

	"shift" command support to GRUB script.

	* include/grub/script_sh.h (grub_script_shift): New prototype.
	* script/execute.c (grub_script_shift): New function.
	* script/main.c (grub_script_init): Register shift command.
	(grub_script_fini): Unregister shift command.
	* util/grub-script-check.c (grub_script_cmd_shift): New function.

	* tests/grub_script_shift.in: New testcase.
	* conf/tests.rmk: Rules for new testcase.

2010-08-12  BVK Chaitanya  <bvk.groups@gmail.com>
